# FraudResumeDetector

./: .env.example  README.md  alembic.ini  pyproject.toml
app/: main.py
app/api/routes/: candidates.py
app/core/: config.py  logging.py
app/db/: models.py  session.py
app/schemas/: candidate.py
app/services/: audit.py  cross_check.py  notifications.py  otp_service.py  profile_service.py  providers.py  resume_parser.py  scoring.py
app/workers/: tasks.py
migrations/: env.py  script.py.mako
tests/: test_cross_check.py  test_scoring.py
