[project]
name = "fraud-resume-detector"
version = "0.1.0"
description = "Fraud resume verification workflow service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.31.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "python-multipart>=0.0.12",
  "httpx>=0.27.2",
  "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
